--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: python
 
-python: 3.7
-
 services:
   - docker
 
 jobs:
   include:
-    - stage: Build Docker Image - Python 3.7 - Debian
+    - stage: Build Docker Image - Python 3.7
       script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t python-pipenv -f Dockerfile .
         - docker images
-    - stage: Test Image with common libraries
       script:
         - docker run --rm -it python-pipenv pipenv install django
