Update Travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 dist: trusty
 
+python: 3.7
+
 services:
   - docker
 
 jobs:
   include:
     - stage: Build Docker Image - Python 3.7
-      script:
+      - script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t python-pipenv -f Dockerfile .
         - docker images
-      script:
+      - script:
         - docker run --rm python-pipenv pipenv install django
