--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,21 @@ services:
 
 jobs:
   include:
-    - stage: Build Docker Image - Python 3.7
-      script:
+    - stage: Test Docker image
+      before_script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t python-pipenv -f Dockerfile .
         - docker images
-    - script:
-      - docker run --rm python-pipenv pipenv install django
-      - docker run --rm python-pipenv pipenv install mysqlclient
-      - docker run --rm python-pipenv pipenv install psycopg2
-      - docker run --rm python-pipenv pipenv install pillow
-    - script:
-      - echo "DONE"
-
+      script:
+        - docker run --rm python-pipenv pipenv install django
+        - docker run --rm python-pipenv pipenv install mysqlclient
+        - docker run --rm python-pipenv pipenv install psycopg2
+        - docker run --rm python-pipenv pipenv install pillow
+    - stage: Deploy to Docker HUB
+      if: branch =~ /^(master|release\/.*)$/
+      before_script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t python-pipenv -f Dockerfile .
+        - docker tag python-pipenv $DOCKER_USERNAME/python-pipenv
+      script:
+        - docker push $DOCKER_USERNAME/python-pipenv:latest
