--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,7 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker build -t python-pipenv -f Dockerfile .
         - docker tag python-pipenv $DOCKER_USERNAME/python-pipenv:$(cat VERSION)
+        - docker tag python-pipenv $DOCKER_USERNAME/python-pipenv:latest
       script:
         - docker push $DOCKER_USERNAME/python-pipenv:$(cat VERSION)
+        - docker push $DOCKER_USERNAME/python-pipenv:latest
